fix some openapi, get things from database
